# toon.rs

./: COMPARISON.md  Cargo.toml  README.md  TUTORIAL.md
benches/: benchmarks.rs
examples/: README.md  counter.rs  dev.rs  events.rs  hello_world.rs  stopwatch.rs
src/: buffer.rs  events.rs  input.rs  lib.rs  output.rs  style.rs  terminal.rs  util.rs  vec2.rs
src/backend/: crossterm.rs  dummy.rs  mod.rs
src/elements/: block.rs  dev.rs  line.rs  map_event.rs  mod.rs  on.rs  span.rs  text.rs
src/elements/containers/: flow.rs  mod.rs  stack.rs  static.rs  stretch.rs
src/elements/containers/container_1d/: flow.rs  mod.rs  share.rs  static.rs  stretch.rs
src/elements/filter/: border.rs  fill_background.rs  float.rs  input_mask.rs  mod.rs  on.rs  ratio.rs  scroll.rs  size.rs  tile.rs  title.rs
src/elements/layout/: flow.rs  mod.rs
