[package]
name = "toon"
version = "0.1.0"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"
description = "A simple, declarative and modular TUI library."
readme = "README.md"
repository = "https://github.com/KaiJewson/toon"
license = "MIT OR Apache-2.0"
keywords = ["tui", "ui", "terminal"]
categories = ["command-line-interface", "gui"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
futures-util = "0.3.6"
os_pipe = "0.9.2"
smartstring = "0.2.5"
unicode-width = "0.1.8"

# TODO: when the PR gets merged, use it
stdio-override = { git = "https://github.com/Koxiaet/stdio-override", rev = "687d84ea1a76ed99617cb9536a82bca542339c3a" }

crossterm_crate = { package = "crossterm", version = "0.18.0", features = ["event-stream"], optional = true }
either_crate = { package = "either", version = "1.6.1", optional = true }

[dev-dependencies]
smol = "1.2.4"

[features]
# TODO: Remove for release
default = ["crossterm", "dev"]

crossterm = ["crossterm_crate"]
dev = ["either"]
either = ["either_crate"]

# Used for #[doc(cfg)]
nightly = []

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
required-features = ["crossterm"]

[[example]]
name = "counter"
path = "examples/counter.rs"
required-features = ["crossterm"]

[[example]]
name = "stopwatch"
path = "examples/stopwatch.rs"
required-features = ["crossterm"]

[[example]]
name = "dev"
path = "examples/dev.rs"
required-features = ["crossterm", "dev"]
