[package]
name = "toon"
version = "0.1.0"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"
description = "A simple, declarative and modular TUI library."
readme = "README.md"
repository = "https://github.com/KaiJewson/toon"
license = "MIT OR Apache-2.0"
keywords = ["tui", "ui", "terminal"]
categories = ["command-line-interface", "gui"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
# Used for stdio capturing
os_pipe = "0.9.2"
# Used to store cell content
smartstring = "0.2.5"
# Used to calculate the width of characters for placing into cells
unicode-width = "0.1.8"

# Used for stdio capturing
# TODO: when the PR gets merged, use it
stdio-override = { git = "https://github.com/Koxiaet/stdio-override" }

# Used in `dev::display_captured` to send data to the main thread
async-channel = { version = "1.5.1", optional = true }
# The Crossterm backend
crossterm_crate = { package = "crossterm", version = "0.18.2", features = ["event-stream"], optional = true }
# Optional integration
either_crate = { package = "either", version = "1.6.1", optional = true }
# Used to get the next event in Crossterm's `EventStream`
futures-core = { version = "0.3.8", optional = true }
# Used in `dev::display_captured` to `block_on` sending
# data to the main thread and map the resulting stream
futures-lite = { version = "1.11.3", optional = true }

[dev-dependencies]
async-io = "1.3.1"
criterion = "0.3.3"
futures-lite = "1.11.3"

[features]
# TODO: Remove for release
default = ["crossterm", "dev", "either"]

crossterm = ["crossterm_crate", "futures-core"]
dev = ["async-channel", "futures-lite"]
either = ["either_crate"]

doc_cfg = []

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
required-features = ["crossterm"]

[[example]]
name = "counter"
path = "examples/counter.rs"
required-features = ["crossterm"]

[[example]]
name = "stopwatch"
path = "examples/stopwatch.rs"
required-features = ["crossterm"]

[[example]]
name = "dev"
path = "examples/dev.rs"
required-features = ["crossterm", "dev"]

[[example]]
name = "events"
path = "examples/events.rs"
required-features = ["crossterm"]

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = true
